[package]
name = "unibar"
version = "0.1.3"
authors = ["Curtis Jones <mail@curtisjones.ca>"]
description = "Simple minimal status bar, written with Xlib in rust."
readme = "README.md"
homepage = "https://github.com/ikubetoomuzik/unibar.git"
repository = "https://github.com/ikubetoomuzik/unibar.git"
license = "MIT"
edition = "2018"
exclude = [
  "files/*",
]

[dependencies]
x11-dl = "2.18.5"
libc = "0.2.74"
dirs = "3.0.1"
clap = "2.33.3"
signal-hook = "0.1.16"
